--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ footer p {
 
 /* Big page title text. */
 .site-title {
-  font-size: 2.2rem; /* matches your original home header size */
+  font-size: 2.2rem;
   font-weight: 500;
   color: #fafaf8;
 }
